@@ -1,3 +1,7 @@
+2003-09-04  Bernhard Held <bernhard@bernhardheld.de>
+
+	* device/lib/_mullong.c: replaced int by short for gcc
+
 2003-08-31  Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
 	* src/SDCCpeeph.c (notVolatile, notVolatileVariable): handle IFX
